--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -43,6 +43,9 @@
   "bugs": {
     "url": "https://github.com/TokiForge/tokiforge/issues"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "devDependencies": {
     "tsup": "^8.0.0",
     "typescript": "^5.3.3"
