--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -49,6 +49,9 @@
   "homepage": "https://github.com/TokiForge/tokiforge#readme",
   "bugs": {
     "url": "https://github.com/TokiForge/tokiforge/issues"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
 
