--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -51,6 +51,9 @@
   "homepage": "https://github.com/TokiForge/tokiforge#readme",
   "bugs": {
     "url": "https://github.com/TokiForge/tokiforge/issues"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
 
