--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -16,7 +16,10 @@
     "build": "tsup",
     "dev": "tsup --watch",
     "lint": "eslint src --ext .ts",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui"
   },
   "files": [
     "dist",
@@ -48,7 +51,9 @@
   },
   "devDependencies": {
     "tsup": "^8.0.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.0.0",
+    "@vitest/ui": "^1.0.0"
   },
   "dependencies": {
     "yaml": "^2.3.4"
