fix(ci): add package-lock.json support and update workflow
- Allow documentation/package-lock.json in .gitignore for CI/CD caching
- Update workflow to fallback to npm install if package-lock.json doesn't exist
- Fix cache-dependency-path configuration

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -36,7 +36,11 @@ jobs:
       - name: Install dependencies
         run: |
           cd documentation
-          npm ci
+          if [ -f package-lock.json ]; then
+            npm ci
+          else
+            npm install
+          fi
 
       - name: Build documentation
         env:
