fix(ci): make all Pages steps optional with continue-on-error
- Add continue-on-error to artifact upload step
- Add condition to deploy step to run even on failure
- Workflow completes successfully even if Pages isn't enabled
- User needs to enable Pages in repo settings for deployment

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -75,12 +75,14 @@ jobs:
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
+        id: pages
         continue-on-error: true
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: documentation/.vitepress/dist
+        continue-on-error: true
 
   deploy:
     environment:
@@ -94,4 +96,5 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v4
         continue-on-error: true
+        if: success() || failure()
 
