feat: release v1.0.0 - major feature update and codebase cleanup
BREAKING CHANGE: Version bump from 0.2.1 to 1.0.0

## New Features
- Token Versioning & Deprecation Support
- Scoped Component Themes
- Plugin API (custom exporters, validators, formatters)
- Accessibility Dashboard (WCAG compliance, contrast checks)
- Responsive & State-Aware Tokens (breakpoints, hover/active states)
- Figma ↔ Code Diff Tool
- CI/CD Integration (automated validation)
- Design Token Analytics (usage tracking, bundle impact)
- Versioned Token Registry (multi-team support)
- IDE Extension Support (autocomplete, hover previews)
- CLI: validate, figma:diff, analytics commands
- Tailwind CSS integration improvements
- Enhanced Figma integration

## Changes
- Version bump: 0.2.1 → 1.0.0 (all packages)
- Removed unnecessary files and test scripts
- Removed emojis from CLI and examples
- Simplified comments and improved code quality
- Enhanced error handling and diagnostics
- Updated all documentation to v1.0.0
- Updated CHANGELOG release dates

## Technical Improvements
- Enhanced TypeScript types
- Improved performance and modularity
- Better error messages and diagnostics
- Professional codebase cleanup

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tokiforge/core",
-  "version": "0.2.1",
+  "version": "1.0.0",
   "description": "Core design token engine for TokiForge",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -50,13 +50,14 @@
     "access": "public"
   },
   "devDependencies": {
+    "@vitest/ui": "^4.0.7",
     "tsup": "^8.0.0",
     "typescript": "^5.3.3",
-    "vitest": "^1.0.0",
-    "@vitest/ui": "^1.0.0"
+    "vitest": "^4.0.7"
   },
   "dependencies": {
+    "vite": "7.2.1",
+    "vitepress": "^1.6.4",
     "yaml": "^2.3.4"
   }
 }
-
