--- a/documentation/package.json
+++ b/documentation/package.json
@@ -28,11 +28,12 @@
     "url": "https://github.com/TokiForge/tokiforge/issues"
   },
   "dependencies": {
-    "@tokiforge/core": "^0.2.1"
+    "@tokiforge/core": "^1.0.0",
+    "vite": "7.2.1",
+    "vitest": "4.0.7"
   },
   "devDependencies": {
-    "vitepress": "^1.0.0",
+    "vitepress": "^1.6.4",
     "vue": "^3.4.0"
   }
 }
-
