--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tokiforge-cli",
-  "version": "0.2.1",
+  "version": "1.0.0",
   "description": "CLI tool for TokiForge design tokens",
   "bin": {
     "tokiforge": "./dist/cli.js"
@@ -43,17 +43,18 @@
     "access": "public"
   },
   "dependencies": {
-    "@tokiforge/core": "^0.2.1",
-    "commander": "^11.1.0",
+    "@tokiforge/core": "^1.0.0",
+    "@tokiforge/tailwind": "^1.0.0",
     "chalk": "^5.3.0",
+    "chokidar": "^3.5.3",
+    "commander": "^11.1.0",
     "inquirer": "^9.2.12",
-    "chokidar": "^3.5.3"
+    "vite": "7.2.1"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
     "tsup": "^8.0.0",
     "typescript": "^5.3.3",
-    "vitest": "^1.0.0"
+    "vitest": "^4.0.7"
   }
 }
-
