--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "build:all": "npm run build:core && npm run build --workspace @tokiforge/cli --workspace @tokiforge/figma --workspace @tokiforge/react --workspace @tokiforge/vue --workspace @tokiforge/svelte --workspace @tokiforge/angular --workspace @tokiforge/tailwind --workspace @tokiforge/playground --workspace TokiForge-docs",
     "dev": "npm run dev --workspaces --if-present",
     "lint": "npm run lint --workspaces --if-present",
+    "lint:fix": "npm run lint:fix --workspaces --if-present",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md,yml,yaml}\" --ignore-path .prettierignore",
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md,yml,yaml}\" --ignore-path .prettierignore",
     "test": "npm run test --workspaces --if-present",
     "clean": "npm run clean --workspaces --if-present && rm -rf node_modules",
     "clean:all": "npm run clean --workspaces && rm -rf node_modules .tsbuildinfo",
@@ -41,7 +44,8 @@
     "publish:figma": "cd packages/figma && npm publish --access public",
     "publish:cli": "cd packages/cli && npm publish",
     "publish:all": "npm run publish:core && npm run publish:react && npm run publish:vue && npm run publish:svelte && npm run publish:angular && npm run publish:tailwind && npm run publish:figma && npm run publish:cli",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "prepare": "husky"
   },
   "keywords": [
     "design-tokens",
@@ -91,10 +95,28 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
+    "@typescript-eslint/eslint-plugin": "^8.46.3",
+    "@typescript-eslint/parser": "^8.46.3",
+    "eslint": "^9.39.1",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.6",
+    "prettier": "^3.6.2",
     "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{js,jsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md,yml,yaml}": [
+      "prettier --write"
+    ]
   }
 }
-
