--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "url": "https://github.com/TokiForge/tokiforge/issues"
   },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
     "@types/node": "^20.10.0",
     "@typescript-eslint/eslint-plugin": "^8.46.3",
     "@typescript-eslint/parser": "^8.46.3",
@@ -102,21 +103,25 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.2.6",
     "prettier": "^3.6.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "typescript-eslint": "^8.46.3"
   },
   "engines": {
     "node": ">=18.0.0"
   },
   "lint-staged": {
-    "*.{ts,tsx}": [
-      "eslint --fix",
+    "packages/**/*.{ts,tsx}": [
+      "eslint --fix --no-warn-ignored",
       "prettier --write"
     ],
-    "*.{js,jsx}": [
-      "eslint --fix",
+    "packages/**/*.{js,jsx}": [
+      "eslint --fix --no-warn-ignored",
       "prettier --write"
     ],
     "*.{json,md,yml,yaml}": [
+      "prettier --write"
+    ],
+    ".github/**/*.{yml,yaml}": [
       "prettier --write"
     ]
   }
