Enhance Vue package with testing and type safety improvements
- Added new scripts for testing: "test", "test:watch", and "test:ui" in package.json.
- Introduced type safety in the provideTheme function and ThemeContext interface in composables.ts.
- Updated useTheme function to support generic types for better type inference.
- Exported additional types from composables.ts for improved usability.

--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -16,7 +16,11 @@
     "build": "tsup",
     "dev": "tsup --watch",
     "lint": "eslint src --ext .ts",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "typecheck": "tsc --noEmit"
   },
   "files": [
     "dist",
@@ -30,7 +34,10 @@
   "devDependencies": {
     "@types/node": "^20.10.0",
     "tsup": "^8.0.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.0.0",
+    "vue": "^3.4.0",
+    "jsdom": "^23.0.0"
   },
   "dependencies": {
     "@tokiforge/core": "^0.2.1"
