--- a/documentation/package.json
+++ b/documentation/package.json
@@ -1,12 +1,13 @@
 {
   "name": "TokiForge-docs",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "TokiForge Documentation Site",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "vitepress dev",
     "build": "vitepress build",
+    "build:all": "npm run build",
     "preview": "vitepress preview"
   },
   "keywords": [
@@ -28,7 +29,7 @@
     "url": "https://github.com/TokiForge/tokiforge/issues"
   },
   "dependencies": {
-    "@tokiforge/core": "^1.0.0",
+    "@tokiforge/core": "^1.1.0",
     "vite": "7.2.1",
     "vitest": "4.0.7"
   },
