--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tokiforge/angular",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Angular adapter for TokiForge theming",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -16,6 +16,7 @@
   },
   "scripts": {
     "build": "tsup",
+    "build:all": "npm run build",
     "dev": "tsup --watch",
     "lint": "eslint src --ext .ts",
     "clean": "rm -rf dist"
@@ -29,7 +30,7 @@
   "peerDependencies": {
     "@angular/common": ">=17.0.0 <22.0.0",
     "@angular/core": ">=17.0.0 <22.0.0",
-    "@tokiforge/core": "^1.0.0"
+    "@tokiforge/core": "^1.1.0"
   },
   "devDependencies": {
     "@angular/common": "^21.0.0-rc.0",
@@ -40,7 +41,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@tokiforge/core": "^1.0.0"
+    "@tokiforge/core": "^1.1.0"
   },
   "keywords": [
     "angular",
