--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,13 +1,15 @@
 {
   "name": "tokiforge-cli",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "CLI tool for TokiForge design tokens",
+  "type": "module",
   "bin": {
     "tokiforge": "./dist/cli.js"
   },
   "main": "./dist/cli.js",
   "scripts": {
     "build": "tsup",
+    "build:all": "npm run build",
     "dev": "tsup --watch",
     "lint": "eslint src --ext .ts",
     "clean": "rm -rf dist",
@@ -43,8 +45,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@tokiforge/core": "^1.0.0",
-    "@tokiforge/tailwind": "^1.0.0",
+    "@tokiforge/core": "^1.1.0",
+    "@tokiforge/tailwind": "^1.1.0",
     "chalk": "^5.3.0",
     "chokidar": "^3.5.3",
     "commander": "^11.1.0",
