--- a/packages/figma/package.json
+++ b/packages/figma/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tokiforge/figma",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Figma integration for TokiForge design tokens",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -14,6 +14,7 @@
   },
   "scripts": {
     "build": "tsup",
+    "build:all": "npm run build",
     "dev": "tsup --watch",
     "clean": "rm -rf dist"
   },
@@ -43,11 +44,12 @@
     "access": "public"
   },
   "devDependencies": {
+    "@types/node": "^20.10.0",
     "tsup": "^8.0.0",
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@tokiforge/core": "^1.0.0",
+    "@tokiforge/core": "^1.1.0",
     "axios": "^1.6.0"
   }
 }
