--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -1,15 +1,16 @@
 {
   "name": "@tokiforge/playground",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Visual web UI for TokiForge design token playground",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:all": "npm run build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tokiforge/core": "^1.0.0",
+    "@tokiforge/core": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
