--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tokiforge/react",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "React adapter for TokiForge theming",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -14,6 +14,7 @@
   },
   "scripts": {
     "build": "tsup",
+    "build:all": "npm run build",
     "dev": "tsup --watch",
     "lint": "eslint src --ext .ts,.tsx",
     "clean": "rm -rf dist"
@@ -25,7 +26,7 @@
   "sideEffects": false,
   "peerDependencies": {
     "react": ">=16.8.0",
-    "@tokiforge/core": "^1.0.0"
+    "@tokiforge/core": "^1.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
@@ -33,7 +34,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@tokiforge/core": "^1.0.0"
+    "@tokiforge/core": "^1.1.0"
   },
   "keywords": [
     "react",
