--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tokiforge/svelte",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Svelte adapter for TokiForge theming",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -16,6 +16,7 @@
   },
   "scripts": {
     "build": "tsup",
+    "build:all": "npm run build",
     "dev": "tsup --watch",
     "lint": "eslint src --ext .ts",
     "clean": "rm -rf dist"
@@ -27,7 +28,7 @@
   "sideEffects": false,
   "peerDependencies": {
     "svelte": ">=3.0.0",
-    "@tokiforge/core": "^1.0.0"
+    "@tokiforge/core": "^1.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
@@ -35,7 +36,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@tokiforge/core": "^1.0.0"
+    "@tokiforge/core": "^1.1.0"
   },
   "keywords": [
     "svelte",
