--- a/packages/tailwind/package.json
+++ b/packages/tailwind/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tokiforge/tailwind",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Tailwind CSS integration for TokiForge design tokens",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -14,9 +14,10 @@
   },
   "scripts": {
     "build": "tsup",
+    "build:all": "npm run build",
     "dev": "tsup --watch",
     "clean": "rm -rf dist",
-    "test": "vitest run"
+    "test": "vitest run --passWithNoTests"
   },
   "files": [
     "dist",
@@ -44,12 +45,14 @@
     "access": "public"
   },
   "devDependencies": {
+    "@types/node": "^20.10.0",
+    "tailwindcss": "^3.0.0",
     "tsup": "^8.0.0",
     "typescript": "^5.3.3",
     "vitest": "^4.0.7"
   },
   "dependencies": {
-    "@tokiforge/core": "^1.0.0",
+    "@tokiforge/core": "^1.1.0",
     "vite": "7.2.1"
   },
   "peerDependencies": {
