--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@tokiforge/vue",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Vue adapter for TokiForge theming",
+  "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -14,6 +15,7 @@
   },
   "scripts": {
     "build": "tsup",
+    "build:all": "npm run build",
     "dev": "tsup --watch",
     "lint": "eslint src --ext .ts",
     "clean": "rm -rf dist",
@@ -29,7 +31,7 @@
   "sideEffects": false,
   "peerDependencies": {
     "vue": ">=3.0.0",
-    "@tokiforge/core": "^1.0.0"
+    "@tokiforge/core": "^1.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
@@ -40,7 +42,7 @@
     "jsdom": "^23.0.0"
   },
   "dependencies": {
-    "@tokiforge/core": "^1.0.0"
+    "@tokiforge/core": "^1.1.0"
   },
   "keywords": [
     "vue",
