--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@tokiforge/vue",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Vue adapter for TokiForge theming",
   "type": "module",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
     }
   },
   "scripts": {
@@ -31,7 +31,7 @@
   "sideEffects": false,
   "peerDependencies": {
     "vue": ">=3.0.0",
-    "@tokiforge/core": "^1.1.0"
+    "@tokiforge/core": "^1.1.1"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
@@ -42,7 +42,7 @@
     "jsdom": "^23.0.0"
   },
   "dependencies": {
-    "@tokiforge/core": "^1.1.0"
+    "@tokiforge/core": "^1.1.1"
   },
   "keywords": [
     "vue",
