chore: update documentation workflow and dependencies
- Modified the GitHub Actions workflow to build both core and Vue packages.
- Added @tokiforge/vue as a dependency in the documentation package.json.
- Updated VitePress configuration to exclude and handle @tokiforge/vue appropriately.

--- a/documentation/package.json
+++ b/documentation/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@tokiforge/core": "^1.2.0",
+    "@tokiforge/vue": "^1.2.0",
     "vite": "7.2.1",
     "vitest": "4.0.7"
   },
